--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -76,5 +76,7 @@
         <attr name="ptrDrawableTop" format="reference" />
         <attr name="ptrDrawableBottom" format="reference" />
     </declare-styleable>
+    
+    <attr name="fontPath" format="string"/>
 
 </resources>
