--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -4,4 +4,6 @@
     <item type="id" name="webview" />
     <item type="id" name="scrollview" />
 	<item type="id" name="viewpager" />
+	
+	<item type="id" name="calligraphy_tag_id" />
 </resources>
